@@ -1,3 +1,10 @@
+2021-09-18  Theppitak Karoonboonyanan  <theppitak@gmail.com>
+
+	Fix typo in TIS-620 character name.
+
+	* include/thai/tis.h:
+	  - Fix typo TIS_[S]YMBOL_BAHT, with backward compatibility macro.
+
 2021-08-31  Theppitak Karoonboonyanan  <theppitak@gmail.com>
 
 	Update Doxyfile for doxygen 1.9.1.
